Bug fix - aligning 1600px content stage across all view options

--- a/demo/sass/css/demo.css
+++ b/demo/sass/css/demo.css
@@ -2066,10 +2066,6 @@ body.offsetopened {
   margin-left: auto;
   margin-right: auto;
   max-width: 1600px;
-  padding-left: 1em;
-  padding-left: 1vw;
-  padding-right: 1em;
-  padding-right: 1vw;
 }
 .ms-grid.full {
   width: 100%;
@@ -2079,21 +2075,13 @@ body.offsetopened {
   padding-left: 0;
   padding-right: 0;
 }
-.ms-grid.fixed {
-  padding-left: 2px;
-  padding-right: 2px;
-}
 .ms-grid.fixed .ms-row {
-  margin-left: 2px;
-  margin-right: 2px;
+  margin-left: -2px;
+  margin-right: -2px;
 }
 .ms-grid.fixed .ms-row > [class*="col-"] {
   padding-left: 2px;
   padding-right: 2px;
-}
-.ms-grid.zero-margin {
-  padding-left: 0;
-  padding-right: 0;
 }
 .ms-grid.zero-margin .ms-row {
   margin-left: 0;
@@ -2423,12 +2411,6 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 2000px) {
-  .ms-grid {
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-left: 0.5vw;
-    padding-right: 0.5vw;
-  }
   .ms-grid .ms-row {
     margin-left: -1em;
     margin-right: -1em;
